tests/expectations/parser/expression/cast_fail.out
namespace = "ParseExpression"
expectation = "Fail"
outputs = [
    """
did not consume all input: 'aas' @ 1:5-8
'u8' @ 1:9-11
""",
    """
Error [EPAR0370005]: expected 'address', 'bool', 'field', 'Future', 'group', 'scalar', 'signature', 'string', 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128' -- found '{'
    --> test:1:10
     |
   1 | 1u128 as { foo: u8 }
     |          ^""",
    """
did not consume all input: ';' @ 1:14-15
""",
    """
Error [EPAR0370005]: expected 'address', 'bool', 'field', 'Future', 'group', 'scalar', 'signature', 'string', 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128' -- found 'bar'
    --> test:1:8
     |
   1 | 1u8 as bar;
     |        ^^^""",
    """
did not consume all input: 'asu8' @ 1:5-9
""",
]
